@@ -1774,8 +1774,9 @@ _gg_opt gg_f_ref[] =
     { .id = 0x0001, .on = "noop", .ac = 0, .op = g_opt_mode_noop },
     { .id = 0x0004, .on = "--rev", .ac = 0, .op = opt_g_reverse },
     { .id = 0x0009, .on = "--info", .ac = 0, .op = prio_opt_g_pinfo },
-    { .id = 0x000A, .on = "sort", .ac = 1, .op = opt_g_sort },
+    { .id = 0x000B, .on = "sort", .ac = 1, .op = opt_g_sort },
     { .id = 0x000B, .on = "--sort", .ac = 1, .op = opt_g_sort },
+    { .id = 0x000B, .on = "-sort", .ac = 1, .op = opt_g_sort },
     { .id = 0x000E, .on = "--cdir", .ac = 0, .op = opt_g_cdironly },
     { .id = 0x000F, .on = "--imatchq", .ac = 0, .op = opt_g_imatchq },
     { .id = 0x0010, .on = "--matchq", .ac = 0, .op = opt_g_matchq },
