@@ -16,6 +16,7 @@
 #define F_MATH_FLOAT                    (a32 << 3)
 
 #define F_MATH_TYPES                    (F_MATH_INT|F_MATH_INT_S|F_MATH_FLOAT)
+#define F_MATH_INT_TYPES                (F_MATH_INT|F_MATH_INT_S)
 
 #define F_MATH_VAR_KNOWN                (a32 << 4)
 #define F_MATH_NITEM                    (a32 << 5)
@@ -43,6 +44,7 @@ typedef struct ___g_math
   uint32_t flags;
   //g_t_pg g_t_ptr;
   void **_m_p;
+  int m_p_i;
   void *next;
   g_op_tg op_t;
   size_t l_off;
@@ -60,8 +62,10 @@ g_process_math_string(__g_handle hdl, char *string, pmda mdm, pmda chain,
 int
 g_build_math_packet(__g_handle hdl, char *field, char oper, pmda mdm,
     __g_math *ret, uint32_t flags);
+void*
+g_get_math_m_p(__g_math math, __g_math p_math);
 int
-g_get_math_g_t_ptr(__g_handle hdl, char *field, __g_math math, uint32_t flags);
+g_get_math_g_t_ptr(__g_handle hdl, char *field, __g_math math, uint32_t flags, __g_math p_math);
 
 typedef void
 g_op_t(void *s, void *d, void *o);
@@ -72,15 +76,37 @@ g_op_t g_arith_add_u64, g_arith_rem_u64, g_arith_mult_u64, g_arith_div_u64,
 
 static void *_m_u64[];
 
+g_op_t g_arith_add_u64_f, g_arith_rem_u64_f, g_arith_mult_u64_f, g_arith_div_u64_f,
+    g_arith_mod_u64_f, g_arith_bin_and_u64_f, g_arith_bin_or_u64_f,
+    g_arith_bin_xor_u64_f, g_arith_bin_lshift_u64_f, g_arith_bin_rshift_u64_f;
+
+static void *_m_u64_f[];
+
 g_op_t g_arith_add_s64, g_arith_rem_s64, g_arith_mult_s64, g_arith_div_s64,
     g_arith_mod_s64, g_arith_bin_and_s64, g_arith_bin_or_s64,
     g_arith_bin_xor_s64, g_arith_bin_lshift_s64, g_arith_bin_rshift_s64;
 
 static void *_m_s64[];
 
-g_op_t g_arith_add_f, g_arith_rem_f, g_arith_mult_f, g_arith_div_f, g_arith_dummy;
+g_op_t g_arith_add_s64_f, g_arith_rem_s64_f, g_arith_mult_s64_f, g_arith_div_s64_f,
+    g_arith_mod_s64_f, g_arith_bin_and_s64_f, g_arith_bin_or_s64_f,
+    g_arith_bin_xor_s64_f, g_arith_bin_lshift_s64_f, g_arith_bin_rshift_s64_f;
+
+static void *_m_s64_f[];
+
+g_op_t g_arith_dummy;
+
+g_op_t g_arith_add_f, g_arith_rem_f, g_arith_mult_f, g_arith_div_f;
 
 static void *_m_f[];
+
+g_op_t g_arith_add_f_u64, g_arith_rem_f_u64, g_arith_mult_f_u64, g_arith_div_f_u64;
+
+static void *_m_f_u64[];
+
+g_op_t g_arith_add_f_s64, g_arith_rem_f_s64, g_arith_mult_f_s64, g_arith_div_f_s64;
+
+static void *_m_f_s64[];
 
 int
 is_ascii_arith_bin_oper(char c);
